write opening and closing popup

--- a/index.html
+++ b/index.html
@@ -55,8 +55,23 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>  
     </footer>
+
+    <div class="popup">
+      <form class="popup__container">
+        <h3 class="popup__title">Редактировать профиль</h3>
+        <fieldset class="popup__input">
+          <input class="popup__user-name">
+          <input class="popup__user-job">
+        </fieldset>
+        <button class="popup__btn-save">Сохранить</button>
+        <button class="popup__btn-close">
+          <img src="./images/Close Icon.png" alt="закрыть">
+        </button>
+      </form>
+    </div>
+
+    <script src="./scripts/script.js"></script>     
   </div> 
-  <script></script>     
 </body>
 </html>
 
