--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
           <button class="place__like"></button>
         </div>
         <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1404681-unsplash (1).png" alt="фото горы Эльбрус">
+          <img class="place__image" src="./images/kirill-pershin-1404681-unsplash.png" alt="фото горы Эльбрус">
           <h2 class="place__title">Гора Эльбрус</h2>
           <button class="place__like"></button>
         </div>
         <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1556355-unsplash (1).png" alt="фото древней церкви на фоне гор">
+          <img class="place__image" src="./images/kirill-pershin-1556355-unsplash.png" alt="фото древней церкви на фоне гор">
           <h2 class="place__title">Домбай</h2>
           <button class="place__like"></button>
         </div>
         <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1404681-unsplash (1).png" alt="фото горы Эльбрус">
+          <img class="place__image" src="./images/kirill-pershin-1404681-unsplash.png" alt="фото горы Эльбрус">
           <h2 class="place__title">Гора Эльбрус</h2>
           <button class="place__like"></button>
         </div>
         <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1556355-unsplash (1).png" alt="фото древней церкви на фоне гор">
+          <img class="place__image" src="./images/kirill-pershin-1556355-unsplash.png" alt="фото древней церкви на фоне гор">
           <h2 class="place__title">Домбай</h2>
           <button class="place__like"></button>
         </div>
