--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
     <div class="popup">
       <form class="popup__container">
         <h3 class="popup__title">Редактировать профиль</h3>
-          <input class="popup__input popup__user-name" type="text" name="user-name" placeholder="Ваше имя">
+          <input class="popup__input popup__user-name" type="text" name="user-name" placeholder="Ваше имя" required>
           <input class="popup__input popup__user-job" type="text" name="user-job" placeholder="Ваше занятие">
-        <button class="popup__btn-save">Сохранить</button>
-        <button class="popup__btn-close"></button>
+        <button class="popup__btn-save" type="submit">Сохранить</button>
+        <button class="popup__btn-close" type="reset"></button>
       </form>
     </div>
     <script src="./scripts/script.js"></script>     
