--- a/index.html
+++ b/index.html
@@ -9,46 +9,46 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="header__logo" src="./images/Vector.png" alt="логотип Место Россия">
+      <img class="header__logo" src="./images/logo.svg" alt="логотип Место Россия">
     </header>
     <main class="content">
       <section class="profile">
         <img class="profile__avatar" src="./images/image.jpg" alt="Аватар">
-          <h1 class="profile__user-name">Жак-Ив Кусто</h1>
-          <p class="profile__user-job">Исследователь океана</p>
-          <button class="profile__edit-button"></button>
-        <button class="profile__add-button"></button>
+        <h1 class="profile__user-name">Жак-Ив Кусто</h1>
+        <p class="profile__user-job">Исследователь океана</p>
+        <button class="profile__edit-button" type="button" aria-label="изменить профиль"></button>
+        <button class="profile__add-button" type="button" aria-label="добавить место"></button>
       </section>
       <section class="places">
         <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1088404-unsplash.png" alt="фото древней церкви на фоне гор">
+          <img class="place__image" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото древней церкви на фоне гор">
           <h2 class="place__title">Карачаевск</h2>
-          <button class="place__like"></button>
+          <button class="place__like" type="button" aria-label="поставить лайк"></button>
         </div>
         <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1404681-unsplash.png" alt="фото горы Эльбрус">
+          <img class="place__image" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="фото горы Эльбрус">
           <h2 class="place__title">Гора Эльбрус</h2>
-          <button class="place__like"></button>
+          <button class="place__like" type="button" aria-label="поставить лайк"></button>
         </div>
         <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1556355-unsplash.png" alt="фото древней церкви на фоне гор">
+          <img class="place__image" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="фото древней церкви на фоне гор">
           <h2 class="place__title">Домбай</h2>
-          <button class="place__like"></button>
+          <button class="place__like" type="button" aria-label="поставить лайк"></button>
         </div>
         <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1404681-unsplash.png" alt="фото горы Эльбрус">
+          <img class="place__image" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="фото горы Эльбрус">
           <h2 class="place__title">Гора Эльбрус</h2>
-          <button class="place__like"></button>
+          <button class="place__like" type="button" aria-label="поставить лайк"></button>
         </div>
         <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1556355-unsplash.png" alt="фото древней церкви на фоне гор">
+          <img class="place__image" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="фото древней церкви на фоне гор">
           <h2 class="place__title">Домбай</h2>
-          <button class="place__like"></button>
+          <button class="place__like" type="button" aria-label="поставить лайк"></button>
         </div>
         <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1088404-unsplash.png" alt="фото древней церкви на фоне гор">
+          <img class="place__image" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото древней церкви на фоне гор">
           <h2 class="place__title">Карачаево-Черкессия</h2>
-          <button class="place__like"></button>
+          <button class="place__like" type="button" aria-label="поставить лайк"></button>
         </div>
       </section>
     </main>
@@ -56,14 +56,16 @@
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>  
     </footer>
     <div class="popup">
-      <form class="popup__container">
-        <h3 class="popup__title">Редактировать профиль</h3>
-          <input class="popup__input popup__user-name" type="text" name="user-name" placeholder="Ваше имя" required>
-          <input class="popup__input popup__user-job" type="text" name="user-job" placeholder="Ваше занятие">
-        <button class="popup__btn-save" type="submit">Сохранить</button>
-        <button class="popup__btn-close" type="reset"></button>
-      </form>
-    </div>     
+      <div class="popup__container">
+        <h3 class="popup__title">Редактировать профиль</h3>  
+        <button class="popup__btn-close" type="button" aria-label="Закрыть"></button>
+        <form class="popup__form" name="profile" method="get">
+          <input class="popup__input popup__input_type_user-name" type="text" name="user-name" placeholder="Ваше имя" required>
+          <input class="popup__input popup__input_type_user-job" type="text" name="user-job" placeholder="Ваше занятие">
+          <button class="popup__btn-save" type="submit" aria-label="Сохранить">Сохранить</button>
+        </form>
+      </div>
+    </div>   
   </div> 
   <script src="./scripts/script.js"></script>
 </body>
