--- a/index.html
+++ b/index.html
@@ -19,38 +19,7 @@
         <button class="profile__edit-button" type="button" aria-label="изменить профиль"></button>
         <button class="profile__add-button" type="button" aria-label="добавить место"></button>
       </section>
-      <section class="places">
-        <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото древней церкви на фоне гор">
-          <h2 class="place__title">Карачаевск</h2>
-          <button class="place__like" type="button" aria-label="поставить лайк"></button>
-        </div>
-        <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="фото горы Эльбрус">
-          <h2 class="place__title">Гора Эльбрус</h2>
-          <button class="place__like" type="button" aria-label="поставить лайк"></button>
-        </div>
-        <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="фото древней церкви на фоне гор">
-          <h2 class="place__title">Домбай</h2>
-          <button class="place__like" type="button" aria-label="поставить лайк"></button>
-        </div>
-        <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="фото горы Эльбрус">
-          <h2 class="place__title">Гора Эльбрус</h2>
-          <button class="place__like" type="button" aria-label="поставить лайк"></button>
-        </div>
-        <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="фото древней церкви на фоне гор">
-          <h2 class="place__title">Домбай</h2>
-          <button class="place__like" type="button" aria-label="поставить лайк"></button>
-        </div>
-        <div class="place">
-          <img class="place__image" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="фото древней церкви на фоне гор">
-          <h2 class="place__title">Карачаево-Черкессия</h2>
-          <button class="place__like" type="button" aria-label="поставить лайк"></button>
-        </div>
-      </section>
+      <section class="places"></section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>  
