--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>  
     </footer>
-    <div class="popup">
+    <div class="popup popup__edit-profile">
       <div class="popup__container">
         <h3 class="popup__title">Редактировать профиль</h3>  
         <button class="popup__btn-close" type="button" aria-label="Закрыть"></button>
@@ -34,7 +34,20 @@
           <button class="popup__btn-save" type="submit" aria-label="Сохранить">Сохранить</button>
         </form>
       </div>
-    </div>   
+    </div>
+
+    <div class="popup popup__add-picture">
+      <div class="popup__container">
+        <h3 class="popup__title">Новое место</h3>  
+        <button class="popup__btn-close popup__btn-close_add-picture" type="button" aria-label="Закрыть"></button>
+        <form class="popup__form popup__form_place" name="place" method="get">
+          <input class="popup__input popup__input_type_place-name" type="text" name="place-name" placeholder="Название" required>
+          <input class="popup__input popup__input_type_place-picture" type="text" name="place-picture" placeholder="Ссылка на картинку">
+          <button class="popup__btn-save" type="submit" aria-label="Создать">Создать</button>
+        </form>
+      </div>
+    </div>
+       
   </div> 
   <script src="./scripts/script.js"></script>
 </body>
