--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         </form>
       </div>
     </div>
-
     <div class="popup popup__add-picture">
       <div class="popup__container">
         <h3 class="popup__title">Новое место</h3>  
@@ -43,11 +42,27 @@
         <form class="popup__form popup__form_place" name="place" method="get">
           <input class="popup__input popup__input_type_place-name" type="text" name="place-name" placeholder="Название" required>
           <input class="popup__input popup__input_type_place-picture" type="text" name="place-picture" placeholder="Ссылка на картинку">
-          <button class="popup__btn-save" type="submit" aria-label="Создать">Создать</button>
+          <button class="popup__btn-save popup__btn-save_add-picture" type="submit" aria-label="Создать">Создать</button>
         </form>
       </div>
     </div>
-       
+  <div class="popup popup__open-picture">
+    <div class="popup__picture-container">
+      <button class="popup__btn-close popup__btn-close_open-picture" aria-label="Закрыть" type="button" ></button>
+      <img class="popup__picture" src=" " alt=" ">
+      <h3 class="popup__subtitle-picture"></h3>
+    </div>
+  </div>
+
+  <template class="element__template">
+    <div class="place">
+      <img class="place__image place__picture_link" src=${link} alt="">
+      <h2 class="place__title place__picture_name"></h2>
+      <button class="place__like place__button_like" type="button" aria-label="поставить лайк"></button>
+      <button class="place__delete place__button_delete" type="button" aria-label="удалить"></button>
+    </div>
+  </template>  
+
   </div> 
   <script src="./scripts/script.js"></script>
 </body>
