make_add_picture

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button class="popup__btn-close popup__btn-close_add-picture" type="button" aria-label="Закрыть"></button>
         <form class="popup__form popup__form_place" name="place" method="get">
           <input class="popup__input popup__input_type_place-name" type="text" name="place-name" placeholder="Название" required>
-          <input class="popup__input popup__input_type_place-picture" type="text" name="place-picture" placeholder="Ссылка на картинку">
+          <input class="popup__input popup__input_type_place-picture" required type="url" name="place-picture" placeholder="Ссылка на картинку">
           <button class="popup__btn-save popup__btn-save_add-picture" type="submit" aria-label="Создать">Создать</button>
         </form>
       </div>
