fixed_README.MD

--- a/index.html
+++ b/index.html
@@ -46,23 +46,21 @@
         </form>
       </div>
     </div>
-  <div class="popup popup__open-picture">
-    <div class="popup__picture-container">
-      <button class="popup__btn-close popup__btn-close_open-picture" aria-label="Закрыть" type="button" ></button>
-      <img class="popup__picture" src=" " alt=" ">
-      <h3 class="popup__subtitle-picture"></h3>
+    <div class="popup popup__open-picture">
+      <div class="popup__picture-container">
+        <button class="popup__btn-close popup__btn-close_open-picture" aria-label="Закрыть" type="button" ></button>
+        <img class="popup__picture" src="url" alt="Picture">
+        <h3 class="popup__subtitle-picture"></h3>
+      </div>
     </div>
-  </div>
-
   <template class="element__template">
     <div class="place">
-      <img class="place__image place__picture_link" src=${link} alt="">
+      <img class="place__image place__picture_link" src="" alt="">
       <h2 class="place__title place__picture_name"></h2>
       <button class="place__like place__button_like" type="button" aria-label="поставить лайк"></button>
       <button class="place__delete place__button_delete" type="button" aria-label="удалить"></button>
     </div>
   </template>  
-
   </div> 
   <script src="./scripts/script.js"></script>
 </body>
