--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
   <template class="element__template">
     <div class="place">
-      <img class="place__image place__picture_link" src="" alt="">
+      <img class="place__image place__picture_link" src="&{link}" alt="">
       <h2 class="place__title place__picture_name"></h2>
       <button class="place__like place__button_like" type="button" aria-label="поставить лайк"></button>
       <button class="place__delete place__button_delete" type="button" aria-label="удалить"></button>
