--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>  
     </footer>
-  <div class="popup popup__edit-profile">
+    <div class="popup popup_type_edit-profile">
       <div class="popup__container">
         <h3 class="popup__title">Редактировать профиль</h3>  
         <button class="popup__btn-close" type="button" aria-label="Закрыть"></button>
@@ -34,8 +34,8 @@
           <button class="popup__btn-save" type="submit" aria-label="Сохранить">Сохранить</button>
         </form>
       </div>
-  </div>
-  <div class="popup popup__add-picture">
+    </div>
+    <div class="popup popup_type_add-picture">
       <div class="popup__container">
         <h3 class="popup__title">Новое место</h3>  
         <button class="popup__btn-close popup__btn-close_add-picture" type="button" aria-label="Закрыть"></button>
@@ -45,14 +45,14 @@
           <button class="popup__btn-save popup__btn-save_add-picture" type="submit" aria-label="Создать">Создать</button>
         </form>
       </div>
-  </div>
-  <div class="popup popup__open-picture">
+    </div>
+    <div class="popup popup_type_open-picture">
       <div class="popup__picture-container">
         <button class="popup__btn-close popup__btn-close_open-picture" aria-label="Закрыть" type="button" ></button>
         <img class="popup__picture" src="url" alt="Picture">
         <h3 class="popup__subtitle-picture"></h3>
       </div>
-  </div>
+    </div>
   <template class="element__template">
     <div class="place">
       <img class="place__image place__picture_link" src="&{link}" alt="">
