--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </footer>
 
 
-    <div class="popup popup_type_edit-profile">
+    <div class="popup">
       <div class="popup__container">
         <h3 class="popup__title">Редактировать профиль</h3>  
         <button class="popup__btn-close" type="button" aria-label="Закрыть"></button>
