--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
     </div>
   </template>  
   </div> 
-  <script src="./scripts/script.js"></script>
-  <script src="./scripts/validate.js"></script>
+  <script type="module" src="./scripts/script.js"></script>
 </body>
 </html>
 
