--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img class="profile__avatar" src='<%=require("./images/image.jpg")%>' alt="Аватар">
+        <button class="profile__avatar-button">
+          <img class="profile__avatar" src='<%=require("../../images/image.jpg' alt="Аватар">
+        </button>
         <h1 class="profile__user-name"></h1>
         <p class="profile__user-job"></p>
         <button class="profile__edit-button" type="button" aria-label="изменить профиль"></button>
@@ -23,8 +25,6 @@
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Mesto Russia</p>  
     </footer>
-
-
     <div class="popup">
       <div class="popup__container">
         <h3 class="popup__title">Редактировать профиль</h3>  
@@ -36,10 +36,24 @@
           <input id="job" class="popup__input popup__input_type_user-job" type="text" name="userjob" placeholder="Ваше занятие" required minlength="2"
           maxlength="200">
           <span id="error-job" class="popup__input-error"></span>
-          <button class="popup__btn-save" type="submit" aria-label="Сохранить">Сохранить</button>
+          <button value="Сохранить" class="popup__btn-save" type="submit" aria-label="Сохранить">Сохранить</button>
         </form>
       </div>
     </div>
+
+    <div class="popup popup_type_edit-avatar">
+      <div class="popup__container">
+        <h3 class="popup__title">Обновить аватар</h3>
+        <button class="popup__btn-close popup__btn-close_edit-avatar" type="button" aria-label="Закрыть"></button>
+        <form class="popup__form popup__form_edit-avatar" name="avatar" novalidate>
+          <input id="avatar" class="popup__input popup__input_type_url" required type="url" name="avatar" placeholder="Ссылка на аватар">
+          <span id="error-avatar" class="popup__input-error"></span>
+          <button class="popup__btn-save popup__btn-save_edit-avatar" type="submit" aria-label="Сохранить">Сохранить</button>
+        </form>
+      </div> 
+    </div>
+
+
     <div class="popup popup_type_add-picture">
       <div class="popup__container">
         <h3 class="popup__title">Новое место</h3>  
@@ -54,9 +68,6 @@
         </form>
       </div>
     </div>
-
-
-
     <div class="popup popup_type_delete-picture">
       <div class="popup__container">
         <h3 class="popup__title">Вы уверены?</h3>  
@@ -66,8 +77,6 @@
         </form>
       </div>
     </div>
-
-    
     <div class="popup popup_type_open-picture">
       <div class="popup__picture-container">
         <button class="popup__btn-close popup__btn-close_open-picture" aria-label="Закрыть" type="button" ></button>
